<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileNameAndSurname"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/headling_24_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Андрей Соловьев" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileEditBtn"
        style="@style/ProfileButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:text="@string/profile_edit_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameAndSurname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileHelpBtn"
        style="@style/ProfileButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_0.5_dp"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:text="@string/profile_help_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileEditBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileAboutUsBtn"
        style="@style/ProfileButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_0.5_dp"
        android:drawableLeft="@drawable/ic_outline_shopping_basket_24"
        android:text="@string/profile_about_us_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileHelpBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileAboutAppBtn"
        style="@style/ProfileButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_0.5_dp"
        android:drawableLeft="@drawable/ic_outline_info_24"
        android:text="@string/profile_about_app_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileAboutUsBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileSignOutBtn"
        style="@style/ProfileButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_0.5_dp"
        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
        android:drawableTint="@color/red"
        android:text="@string/profile_logout_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileAboutAppBtn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>