<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10_dp">

    <ImageView
        android:id="@+id/startAuthImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/launch_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:text="@string/start_auth_supermarkets"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/headling_20_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startAuthImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startAuthSignInBtn"
        style="@style/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50_dp"
        android:text="@string/start_auth_sign_in_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startAuthSignUpBtn"
        style="@style/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:text="@string/start_auth_sign_up_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startAuthSignInBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>